Fixed text alignment and font

--- a/applesiliconcompatibility/css/main.css
+++ b/applesiliconcompatibility/css/main.css
@@ -47,9 +47,19 @@ a:hover {
 }
 
 /* ------------------------------------ */
-h1,h2,h3,h4,h5,h6 {margin: 0px;}
+h1 {
+  font-size:5vmin;
+  color: rgba(24, 24, 24, 0.842);
+}
 
-p {margin: 0px;}
+h1,h2,h3,h4,h5,h6 {
+  margin: 0px;
+}
+
+p {
+  margin: 0px;
+  font-size:2vmin;
+}
 
 ul, li {
 	margin: 0px;
@@ -89,7 +99,7 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  background-color: transparent;
+  background-color: #c783c22d;
   border-radius: 4px;
   border: 0;
   box-shadow: inset 0 0 0 1px #000000;
@@ -561,7 +571,9 @@ tbody tr:hover {
 
 .column0 {
   width: 100%;
-  padding-left: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
 }
 
 .column1 {
